fixed alignment and size in mob view

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -93,6 +93,7 @@ a:hover	{
     box-sizing: border-box;
     object-fit: contain; /* Ensures images maintain their aspect ratio */
 
+
 }
 
 .lightbox img {
@@ -103,6 +104,12 @@ a:hover	{
 
 .lightbox:target {
     display: block;
+}
+
+.lightbox a {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -322,14 +329,19 @@ display:none;
     }
 
     .gallery a {
-        width: 70%; /* Adjust image width */
+        width: 55%; /* Adjust image width */
         margin-bottom: 10vw; /* Add space between rows */
+    }
+
+    .lightbox {
+    align-items: center;
+    justify-content: center;
     }
 
     /* Adjust lightbox images on small screens */
     .lightbox img {
-        max-width: 80%;
-        max-height: 80%;
+        max-width: 90%;
+        max-height: 90%;
         object-fit: contain; /* Maintain aspect ratio without squashing */
     }
 
